hphp/test/zend/bad/Zend/tests/bug67368.php
<?php
class FooBar {
		const bar = ["bar" => 3]["bar"];
}
echo "okey";
